--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "materialize-css": "^1.0.0-rc.2",
+    "axios": "^0.19.2",
+    "formik": "^2.1.4",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.6",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
+    "redux-store": "^0.0.0",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
