--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.19.2",
     "date-fns": "^2.15.0",
     "formik": "^2.1.4",
+    "install": "^0.13.0",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-materialize": "^3.9.2",
@@ -22,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-strap-table": "^1.0.6",
     "react-toastify": "^6.0.6",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
