--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.1.4",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.19",
     "materialize-css": "^1.0.0",
     "node-sass": "^4.14.1",
     "npm": "^6.14.7",
